--- a/app.html
+++ b/app.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>皮肤交易日历</title>
+    <script>
+          if ('serviceWorker' in navigator && 'PushManager' in window) {
+            navigator.serviceWorker.register('/sw.js').then(reg => {
+              console.log('SW registered');
+            });
+          }
+    </script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -361,3 +368,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
